# nba-fantasy-engine

./: .env.example  .gitignore  pyproject.toml
src/fantasy_engine/: config.py
src/fantasy_engine/analytics/: add_drop.py  advanced_metrics.py  alerts.py  category_analysis.py  draft.py  draft_room.py  history.py  keeper.py  lineup.py  matchup.py  matchup_real.py  monopoly.py  offseason.py  pick_valuation.py  position_feasibility.py  positional_scarcity.py  punting.py  rotation_alerts.py  splits.py  strategy.py  team_context.py  trade_eval.py  trade_finder.py  trade_intelligence.py  trade_simulator.py  trends.py  valuation.py  weekly_optimizer.py  zscores.py
src/fantasy_engine/api/: app.py  deps.py  schemas.py
src/fantasy_engine/api/routers/: admin.py  chat.py  draft_room.py  dynasty.py  insights.py  league.py  lineup.py  matchups.py  metrics.py  offseason.py  players.py  strategy.py  teams.py  trade_intelligence.py  trades.py  trends.py  waiver.py  (+1 more)
src/fantasy_engine/coach/: engine.py  executor.py  tools.py
src/fantasy_engine/db/: models.py  session.py
src/fantasy_engine/ingestion/: balldontlie.py  external.py  fantrax_api.py  fantrax_csv.py  injuries.py  league_loader.py  league_rules.py  nba_advanced.py  nba_stats.py  schedule.py  trade_history.py  transactions.py
src/fantasy_engine/scripts/: analyze.py  import_csv.py  matchup.py
tests/: test_analytics_unit.py  test_api_regression.py
ui/: package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: Card.tsx  PickSelector.tsx  PlayerInput.tsx  Sidebar.tsx
ui/src/lib/: api.ts
(+10 files in other folders)
