[project]
name = "nba-fantasy-engine"
version = "0.1.0"
description = "NBA Fantasy Basketball Analytics Engine for Fantrax H2H 9-Cat Dynasty"
requires-python = ">=3.11"
dependencies = [
    # Data sources
    "nba_api>=1.4",
    "httpx>=0.27",

    # Database
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",

    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",

    # Data processing
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",

    # Utilities
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
fantrax = [
    "fantraxapi>=1.0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
